continuando a aplicação
